fix up collapsing title bar when responding to smaller screen size

--- a/src/components/NavBars/TitleBar/TitleBar.module.scss
+++ b/src/components/NavBars/TitleBar/TitleBar.module.scss
@@ -209,6 +209,10 @@ header {
 	.Info {
 		margin-right: 0;
 	}
+
+	.TitleBar {
+		padding: 11px 17px;
+	}
 }
 
 @media only screen and (max-width: 768px) {
